Fixed navbar, working on aligning menu for page

--- a/style.css
+++ b/style.css
@@ -12,6 +12,21 @@ body, html {
     text-align: center;
 }
 
+svg {
+    width: 3em;
+}
+
+#hamburger {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 1em;
+    top: 1em;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 #hero-img {
     width: 75vw;
 }
@@ -61,45 +76,6 @@ h2 {
     height: 7em;
     margin: 2em;
     padding: .5em;
-}
-
-#navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: rgba(
-        0,
-        0,
-        0,
-        0.5
-    ); /* Adjust the background color and opacity as needed */
-    color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Optional: Add a shadow for depth */
-    z-index: 2;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    backdrop-filter: blur(5px);
-}
-#navbar h2 {
-    margin-left: 15px;
-}
-
-#navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 0 25px;
-}
-
-#hamburger {
-    height: 3.3125em;
-    width: 6.1875em;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
 }
 
 #button-col {
